--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -1,4 +1,4 @@
-name: pr-test-and-update-docs
+name: PR Tests + Compliance
 
 on:
   pull_request:
@@ -14,7 +14,7 @@ env:
 
 jobs:
   tf-validate:
-    name: terraform validation
+    name: Terraform validate
     runs-on: ubuntu-latest
     strategy:
       matrix: { dir: ["./modules/init"] }
@@ -39,7 +39,7 @@ jobs:
           terraform validate
 
   tf-docs:
-    name: terraform docs
+    name: Terraform documentation
     runs-on: ubuntu-latest
     needs: tf-validate
     strategy:
