--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -14,4 +14,7 @@ jobs:
         with:
           release-type: terraform-module
           package-name: release-please-action
+          extra-files: |
+            README.md
+            examples/init/main.tf
           
