--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -1,4 +1,4 @@
-name: Release Please
+name: Call Release Please
 
 on:
   push:
@@ -6,12 +6,9 @@ on:
       - master
 
 jobs:
-  release-please:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: google-github-actions/release-please-action@0fef4afcc574a384e0d8cee69de13e864b80dc6f # v3.2.7
-        with:
-          release-type: terraform-module
-          package-name: release-please-action
-          
+  tf-tests:
+    uses: entur/gh-workflows/.github/workflows/release-please.yml@main
+    with:
+      version_bumped_files: |
+        README.md
+        examples/init/main.tf
