--- a/.github/workflows/pr-tests-terraform.yml
+++ b/.github/workflows/pr-tests-terraform.yml
@@ -3,7 +3,7 @@ name: Call Terraform Tests, Docs & Compliance
 on:
   pull_request:
     branches:
-      - master
+      - main
     types:
       - opened
       - synchronize
