--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -7,23 +7,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  helm-release:
-    name: helm release
-    runs-on: ubuntu-24.04
-    strategy:
-      matrix:
-        chart: [common]
-
-    steps:
-      - name: Checkout source code
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-        with:
-          ref: ${{ github.ref }}
-          fetch-depth: 0
-
-      - name: Release
-        uses: googleapis/release-please-action@v4
-        with:
-          release-type: terraform-module
-          token: ${{ secrets.GITHUB_TOKEN }}
-          path: "modules/init"
+  release:
+    uses: entur/gha-meta/.github/workflows/release.yml@v1
+    with:
+      path: "modules/init"
+      release_type: "terraform-module"
