feat: add custom labels (#23)
ci fixes:
Migrate away from gh-workflows
Use release-please v4 from gha-meta
Potato project is deleted, use tfmodules instead in tests
Tag release with major versions as well as major.minor.patch (same as other gha- repos)

feat: add custom labels to init module

* terraform-docs: automated action

* ci: add custom_labels to test tf code

* ci: rerun on all pr changes

* ci: use gha-meta release

---------

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -1,15 +1,14 @@
-name: Call Release Please
+name: release
 
 on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
-  tf-tests:
-    uses: entur/gh-workflows/.github/workflows/release-please.yml@main
+  release:
+    uses: entur/gha-meta/.github/workflows/release.yml@v1
     with:
-      release_type: terraform-module
-      version_bumped_files: |
-        README.md
-        examples/init/main.tf
+      path: "modules/init"
+      release_type: "terraform-module"
